--- a/04-docker部署单页面应用/cra-deploy/Dockerfile
+++ b/04-docker部署单页面应用/cra-deploy/Dockerfile
@@ -2,9 +2,9 @@ FROM node:14-alpine as builder
 
 WORKDIR /code
 
-# 先将依赖目录转入到code目录
+# 先将依赖目录转入到code目录 -- 判断这一层的文件是否和缓存相同
 ADD package.json package-lock.json /code/
-# 如果没有变化 yarn不会再次下载依赖
+# 如果相同， yarn就不会执行
 RUN yarn
 
 # 再将src下更新的代码cope到code目录下
