--- a/04-docker部署单页面应用/cra-deploy/Dockerfile
+++ b/04-docker部署单页面应用/cra-deploy/Dockerfile
@@ -5,11 +5,11 @@ WORKDIR /code
 # 先将依赖目录转入到code目录 -- 判断这一层的文件是否和缓存相同
 ADD package.json package-lock.json /code/
 # 如果相同， yarn就不会执行
-RUN yarn
+RUN npm install
 
 # 再将src下更新的代码cope到code目录下
 ADD . /code
-RUN yarn && npm run build # 打包
+RUN  npm run build # 打包
 
 CMD npx serve -s build
 
