--- a/04-docker部署单页面应用/cra-deploy/package.json
+++ b/04-docker部署单页面应用/cra-deploy/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts ../../05-oss静态资源控制/oss-deploy/build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
